--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,91 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view = "http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4CEBD"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@drawable/mbg"
     tools:context=".activities.LoginActivity">
 
-    <LinearLayout
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/animation_view"
+        android:layout_gravity="center_horizontal"
+        app:lottie_rawRes="@raw/welcome"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        app:layout_constraintBottom_toTopOf="@id/ImageView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardBackgroundColor="@color/white"
+        android:foreground="@drawable/custom_edittext"
+        app:cardCornerRadius="23dp"
+        app:cardElevation="20dp">
 
-
-        <TextView
-            style="@style/TextAppearance.AppCompat.Title"
-            android:id="@+id/textView"
-            android:textSize="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Login Now" />
-
-        <TextView
-            style="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="Login To Continue" />
-
-        <EditText
-            android:background="@drawable/edittext"
-            android:id="@+id/etEmail"
+        
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:hint="Email Address"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:padding="24dp">
 
-        <EditText
-            android:background="@drawable/edittext"
-            android:id="@+id/etpassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:hint="Password"
-            android:ems="10"
-            android:inputType="textPassword" />
+            <TextView
+                android:id="@+id/textView"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/days_one"
+                android:textAllCaps="true"
+                android:text="Login Now"
+                android:textAlignment="center"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/LoginBtn"
-            android:layout_marginTop="25dp"
-            android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/primarybtn"
-            android:text="Log In" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_marginTop="30dp"
+                        android:id="@+id/textField2"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:endIconMode="clear_text"
+                        app:helperText="Required"
+                        app:helperTextTextColor="#F11111"
+                        android:hint="Email">
 
-        <TextView
-            android:id="@+id/SignUpbtn"
-            android:layout_marginTop="24dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:text="Don't have an account? Sign Up" />
-    </LinearLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/baseline_person_24"
+                        android:drawablePadding="8dp"
+                        android:inputType="textEmailAddress" />
 
-    <ImageView
-        android:id="@+id/ImageView2"
+                   </com.google.android.material.textfield.TextInputLayout>
 
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_alignParentBottom="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/wave"/>
 
-</RelativeLayout>
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_marginTop="16dp"
+                        android:id="@+id/textField3"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:helperText="Required"
+                        app:helperTextTextColor="#F11111"
+                        app:endIconMode="password_toggle"
+                        android:hint="Password">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/etpassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword"
+                            android:drawableStart="@drawable/pass"
+                            android:drawablePadding="7dp"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+
+                    <Button
+                        android:id="@+id/LoginBtn"
+                        android:layout_marginTop="25dp"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        app:cornerRadius = "24dp"
+                        android:backgroundTint="#FF9800"
+                        android:text="Log In" />
+
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/SignUpbtn"
+                android:layout_marginTop="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:text="Don't have an account? Sign Up" />
+
+
+</LinearLayout>
