--- a/app/src/main/res/drawable/option_item_selected_bg.xml
+++ b/app/src/main/res/drawable/option_item_selected_bg.xml
@@ -5,5 +5,5 @@
     <corners android:radius="4dp"/>
     <stroke
         android:width="1dp"
-        android:color="#DC1414"/>
+        android:color="@color/black"/>
 </shape>
