--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#F4CEBD"
+    android:background="#73A5F6"
     android:layout_width="match_parent"
     android:padding="20dp"
     android:layout_height="match_parent">
