--- a/app/src/main/res/drawable/gradientbackground.xml
+++ b/app/src/main/res/drawable/gradientbackground.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="#FC5C7D"
-        android:endColor="#6A82FB"
+        android:startColor="#1FA2FF"
+        android:centerColor="#12D8FA"
+        android:endColor="#A6FFCB"
         android:angle="90"/>
     <corners
         android:radius="0dp"/>
